--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
     <script type="module" src="/src/main.jsx"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5STNWmN1XKRigPYXFn_v-iDGLcJC7D8Y&libraries=places"></script>
+  </div>
   </body>
 </html>
